# evo-python-sdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml
evo-client-common/: .git-blame-ignore-refs  .gitignore  Makefile  README.md  hello.py  mkdocs.yml  oauth.md  pyproject.toml  quickstart.md  requirements_compatibility.txt
evo-client-common/docs/: aio.md  concepts.md  index.md  interfaces.md  quickstart.md  requirements.txt
evo-client-common/docs/clients/: discovery.md  workspaces.md
evo-client-common/docs/examples/: code_samples.py  notebook_utils.ipynb  oauth.ipynb  quickstart.ipynb
evo-client-common/docs/oauth/: authorization-code.md  client-credentials.md  data-types.md  device-flow.md  exceptions.md
evo-client-common/docs/reference/: data.md  exceptions.md  notebook-utils.md
evo-client-common/docs/reference/file-io/: index.md  local-storage.md  remote-storage.md
evo-client-common/src/evo/aio/: __init__.py  transport.py
evo-client-common/src/evo/common/: __init__.py  _types.py  connector.py  exceptions.py  interfaces.py  pydantic_utils.py  service.py
evo-client-common/src/evo/logging/: logging.py
evo-client-common/src/evo/notebooks/: __init__.py  _consts.py  _helpers.py  authorizer.py  env.py  widgets.py
evo-client-common/src/evo/oauth/: data.py  exceptions.py  oauth_redirect_handler.py  oidc.py
evo-client-common/src/evo/workspaces/: __init__.py  client.py  data.py  exceptions.py
evo-client-common/tests/aio/: test_transport.py
evo-client-common/tests/common/: test_connector.py  test_data.py
evo-client-common/tests/common/io/: common.py  test_azure.py  test_bytes.py  test_download.py  test_storage.py
evo-client-common/tests/common/utils/: test_cache.py  test_feedback.py
evo-client-common/tests/data/: health_check.json  new_workspace.json
evo-client-common/tests/discovery/: test_discovery_client.py
evo-client-common/tests/oauth/: test_authorization_code_authorizer.py  test_data.py  test_oidc.py  test_server.py
evo-client-common/tests/workspaces/: test_data.py  test_workspace_client.py
evo-object-client/: .gitignore  README.md  mkdocs.yml  pyproject.toml  quickstart.md
evo-object-client/docs/: data-types.md  index.md  object-data-client.md  object-service-client.md  quickstart.md
evo-object-client/docs/examples/: code_samples.py  quickstart.ipynb
evo-object-client/docs/overrides/: main.html
evo-object-client/docs/stylesheet/: extra.css
evo-object-client/src/evo/object/: client.py  data.py  exceptions.py  io.py
evo-object-client/tests/: test_data_client.py  test_io.py  test_object_service_client.py  test_tables.py
evo-object-client/tests/data/: __init__.py  get_object.json  get_object_validator_check.json  list_objects_0.json  list_versions.json  object_already_exists_error.json  put_data.json  put_data_batch.json  put_data_exists.json
samples/: README.md  pyproject.toml
samples/auth-and-evo-discovery/: evo-discovery.ipynb  native-app-token.ipynb  service-app-token.ipynb
samples/blockmodels/: api-examples.ipynb  requirements.txt  sdk-examples.ipynb
samples/blockmodels/create-a-block-model/: create-a-regular-block-model.ipynb  create-a-variable-octree-block-model.ipynb
samples/blockmodels/download-a-block-model/: download-entire-block-model.ipynb  download-using-bbox.ipynb
samples/blockmodels/manage-block-models/: delete-a-block-model.ipynb  listing-block-models.ipynb  restore-a-block-model.ipynb
samples/blockmodels/sample/: data.parquet  data_update.parquet
samples/blockmodels/update-a-block-model/: adding-columns.ipynb  deleting-columns.ipynb  renaming-columns.ipynb  updating-columns.ipynb
samples/blockmodels/update-a-block-model/sample/: data.parquet  data_update.parquet
samples/colormaps/: README.md  api-examples.ipynb  sdk-examples.ipynb
samples/common-tasks/: requirements.txt  working-with-parquet.ipynb
samples/common-tasks/data/example1/: regular-bm-named-columns.csv
samples/common-tasks/data/example2/: regular-bm-uuid-columns.csv
samples/common-tasks/data/example3/: variable-octree-bm-named-columns.csv  variable-octree-bm-named-columns.parquet
samples/common-tasks/data/example4/: variable-octree-bm-uuid-columns.csv  variable-octree-bm-uuid-columns.parquet
samples/common-tasks/data/example5/: bm-columns-renamed.parquet  bm.parquet
samples/common-tasks/data/example6/: bm-new-data-type.parquet
samples/common-tasks/data/example7/: bm-reduced-columns.parquet
samples/files/: README.md  delete-a-file.ipynb  download-a-file.ipynb  list-files.ipynb  upload-a-file.ipynb
samples/files/data/: example.txt
samples/files/scripts/: MX-Deposit-file-to-evo-file-script.py  file-input-output-script.py  file-input-script.py
samples/geoscience-objects/: README.md
samples/geoscience-objects/download-drilling-campaign/: download-drilling-campaign.ipynb
samples/geoscience-objects/download-pointset/: download-pointset.ipynb  requirements.txt
samples/geoscience-objects/helpers/: evo_common.py
samples/geoscience-objects/publish-downhole-collection/: publish-downhole-collection.ipynb
samples/geoscience-objects/publish-drilling-campaign/: publish-drilling-campaign.ipynb
samples/geoscience-objects/publish-pointset/: publish-pointset.ipynb  requirements.txt
samples/geoscience-objects/publish-regular-2d-grid/: README.md  publish-regular-2d-grid.ipynb  requirements.txt
samples/geoscience-objects/publish-triangular-mesh/: README.md  publish-triangular-mesh.ipynb  requirements.txt
samples/workspaces/: api-examples.ipynb  requirements.txt  sdk-examples.ipynb
samples/workspaces/bonus/: move-objects.ipynb  workspace_utils.py
samples/workspaces/user-roles/: assign-roles-to-users.ipynb  list-user-roles.ipynb  remove-a-users-role.ipynb  retrieve-current-users-role.ipynb
samples/workspaces/workspaces/: create-a-workspace.ipynb  delete-a-workspace.ipynb  list-workspaces.ipynb  restore-a-deleted-workspace.ipynb  retrieve-a-workspace.ipynb  update-a-workspace.ipynb
(+86 files in other folders)
