[project]
name = "evo-python-sdk"
version = "0.1.0"
description = "Monorepo containing independently versioned Evo Python SDKs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evo-sdk-common[aiohttp]",
    "evo-objects[utils]",
    "evo-files",
]

[project.urls]
Source = "https://github.com/SeequentEvo/evo-python-sdk"
Tracker = "https://github.com/SeequentEvo/evo-python-sdk/issues"
Homepage = "https://www.seequent.com/"
Documentation = "https://developer.seequent.com/"

[project.optional-dependencies]
notebooks = [
    "evo-sdk-common[notebooks]",
]

[dependency-groups]
test = ["pytest", "freezegun", "parameterized==0.9.0"]
dev = [
    "pre-commit >= 4",
    "ruff==0.9.1",              # keep in sync with .pre-commit-config.yaml
    "bumpver",
    "coverage[toml]",
    { include-group = "test" },
    { include-group = "notebooks" },
]
notebooks = [
    "evo-python-sdk[notebooks]",
    "jupyter",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.uv.sources]
evo-sdk-common = { workspace = true }
evo-files = { workspace = true }
evo-objects = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
