[project]
name = "evo-object-client"
version = "2.2.2"
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "evo-client-common",
    "pydantic>=2,<3",
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
aiohttp = ["evo-client-common[aiohttp]>=2.0.1"]
utils = ["pyarrow"]

[dependency-groups]
# Dev dependencies. The version is left unspecified so the latest is installed.
test = [
    "evo-object-client[aiohttp,utils]",
    "pandas",
    "parameterized==0.9.0",
    "pytest",
]
dev = [
    "bumpver",
    "coverage[toml]",
    "ruff",
    {include-group="test"},
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.bumpver]
current_version = "v2.2.2"
version_pattern = "vMAJOR.MINOR.PATCH[.PYTAGNUM]"
commit = "True"
tag = "True"
commit_message = "Bump version from {old_version} to {new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{pep440_version}"',
    'current_version = "{version}"',
]
