[project]
name = "samples"
version = "0.0.1"
description = "Code samples for the Seequent Evo Python SDK"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "evo-schemas>=2025.9.12",
    "evo-sdk>=0.1.17",
    "geosoft>=2025.1.1 ; sys_platform == 'windows'",
    "jupyterlab>=4.3.6",
    "pandas[excel]>=2.2.3",
    "prettytable>=3.16.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "uuid>=1.30",
    "ruff>=0.14.2",
]

[project.urls]
Source = "https://github.com/SeequentEvo/evo-python-sdk"
Tracker = "https://github.com/SeequentEvo/evo-python-sdk/issues"
Homepage = "https://www.seequent.com/"
Documentation = "https://developer.seequent.com/"

